Add student information

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <!--
+        Name:   Reeve Jarvis
+        Course: DGL-213
+        Section: DLU1
+        Assignment: Module #1 Milestone #2
+        Date: 09/30/2021
+
+        Filename:   index.html
+        -->
         <meta charset="utf-8" />
         <title>Flood Fill</title>
 
