Link new fonts used

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         -->
         <meta charset="utf-8" />
         <title>Flood Fill</title>
-
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
         <!-- New Addition - Styles added for a more responsive game, as well as better UI and personality -->
         <style>
             :root {
