Update naming conventions for playerPoints

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <p>Clicks: &nbsp;</p>
                     <p id="numberOfClicks"></p>
                     <p>Points: &nbsp;</p>
-                    <p id="playerScore"></p>
+                    <p id="playerPoints"></p>
                 </section>
             </div>
             <!-- New Addition - Area for winning/highscore results -->
