--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     <!-- New Addition - Updated Information on scoring system -->
                     <h2>Scoring System:</h2>
                     <p>
-                        You get 5 points per cell changed on each click. When you fill the board your final score is calculated based on the number of clicks it
-                        took you to finish. Higher changes, higher rewards!
+                        You get <strong>5 points</strong> per cell changed on each click. When you fill the board your final score is calculated based on the
+                        number of clicks it took you to finish. Higher changes, higher rewards!
                     </p>
                     <p>You must score at least <strong>200 points</strong> to beat the grid.</p>
                 </div>
