--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         You get <strong>5 points</strong> per cell changed on each click. When you fill the board your final score is calculated based on the
                         number of clicks it took you to finish. Higher changes, higher rewards!
                     </p>
-                    <p>You must score at least <strong>200 points</strong> to beat the grid.</p>
+                    <p>Your final score must be at least <strong>200 points</strong> to beat the grid.</p>
                 </div>
             </div>
             <div id="ui">
