--- a/index.html
+++ b/index.html
@@ -60,7 +60,23 @@
                 display: flex;
                 flex-flow: column;
             }
-            #gameTitle,
+
+            #gameTitle {
+                display: flex;
+                flex-flow: column;
+                background-color: rgba(255, 255, 255, 0.5);
+                border: 3px solid black;
+                border-collapse: collapse;
+                text-align: center;
+            }
+
+            #copyright {
+                font-weight: bold;
+                font-size: 0.75rem;
+                padding-right: 1rem;
+                margin-left: auto;
+            }
+
             #gameBoard,
             #ui,
             #results {
@@ -133,6 +149,7 @@
         <div id="gameArea">
             <div id="gameTitle">
                 <h1>Flood Fill</h1>
+                <p id="copyright">Interface designed by: Reeve Jarvis - ItsJustJarvis development</p>
             </div>
             <div id="gameBoard">
                 <div id="canvasArea">
