Update interface content

--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
                     </ul>
                     <h2>Scoring System:</h2>
                     <p>
-                        You get <strong>5 points</strong> per cell changed on each click. Your score is calculated based on the number of clicks it took you to
-                        finish. Higher changes, higher rewards!
+                        You get <strong>5 points</strong> per cell changed on each click. Your score is calculated based on the number of clicks you've taken.
+                        Higher changes, higher rewards!
                     </p>
-                    <p>Your final score must be at least <strong>200 points</strong> to beat the grid.</p>
+                    <p>Your final score must be at least <strong>200 points</strong> to win.</p>
                 </div>
             </div>
             <div id="ui">
